comments: cull the never-culled files (pass 2) (#78)
Second pass of the comment cull, covering the ~535 files pass 1 (#77) never touched. A comment survives
only if it carries a hidden catch the code cannot convey; no percentage target.

448 files. Whole arc: 48,451 -> 30,768 comment lines (-17,683, 36.5%), measured with one tokenizer
across both revisions. Keep rates are highest exactly where hidden catches concentrate - the frozen wire
format (14% cut) and the crypto primitives (17%) - and several files finished at zero deletions.

Two provably wrong comments were found and removed rather than rewritten: ChunkedInstallSnapshotTest
claimed a chunk was "not the final chunk" on a call passing done=true, and ConfigSigner claimed an
"ECDSA fallback" that does not exist in the module.

RFC clause ids (W2-3, AU4-4) and TLA+ invariant names (INV-SI-2) were kept throughout: they resolve to
real documents, so they are load-bearing citations rather than the internal item numbers the rule
strips. Section headers were judged individually - pure rules go, but a header stating a threading
invariant stays.

Verification: code tokens compared per file (not bytes, so no whitespace normalisation can mask a lost
token) - 448 files, 0 changed; every XML/YAML/shell file parses; heredoc bodies byte-identical; the four
CI-gate fixtures that assert against repo file contents still match; TODO count unchanged at 6; no
functional comment-shaped directive touched. Full-reactor CI green.