@@ -12,43 +12,14 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
- * Netty-migration baseline - <b>surface 3: edge fan-out streaming wire</b>
- * ({@code configd-distribution-service}). Measures the per-frame allocation of the edge
- * {@link EdgeFrameCodec} as the fan-out server / edge client actually exercise it
- * ({@code FanOutServer.send} line 644, {@code EdgeStreamClient} line 537 call the
- * allocating {@link EdgeFrameCodec#encode(EdgeFrame)} per frame, then write to a
- * per-connection {@code OutputStream}). Run with {@code -prof gc}; the metric is
+ * Measures the per-frame allocation of the edge {@link EdgeFrameCodec} as the fan-out
+ * server / edge client actually exercise it. Run with {@code -prof gc}; the metric is
  * {@code gc.alloc.rate.norm} (B/op).
  *
- * <h2>Why this is the highest-payoff surface a priori</h2>
- * NOTIFY is the high-volume push frame (every committed delta fans out to every
- * subscriber). Its encode path is allocation-heavy by construction: a per-notification
- * {@code CommandCodec.encodeBatch} blob, an intermediate {@code List<byte[]>}, a
- * per-notification {@code ByteBuffer}, then the final frame array - several allocations
- * per frame, multiplied by the batch size. Decode rebuilds {@code ArrayList}s,
- * {@code ConfigDelta}s, mutation lists, and {@code byte[]}s. This is precisely the term a
- * pooled-{@code ByteBuf} streaming encoder would target.
- *
- * <ul>
- *   <li>{@code encodeNotify} - STATUS QUO server->edge push, {@code notifyCount} deltas
- *       per frame (1 = a single commit; 64 = {@code MAX_NOTIFY_BATCH}, a full coalesced
- *       batch).</li>
- *   <li>{@code decodeNotify} - the edge receive side.</li>
- *   <li>{@code encodeHeartbeat} - the cheap coalesced keep-alive frame, for contrast
- *       (payload-independent; the same tiny frame regardless of {@code notifyCount}).</li>
- * </ul>
- *
  * <p><b>Scope (baseline honesty):</b> isolates the wire-codec allocation of a SIGNED delta
- * (the production steady-state shape) - the term Netty's pooled {@code ByteBuf} / an
- * into-buffer codec rewrite would replace. Two production costs sit ON TOP of this and are
- * NOT included here (both additive, same direction): the {@code SSLSocket} write allocation,
- * and {@code FanOutSessionCore}'s per-frame batch assembly (the growing {@code ArrayList} +
- * a per-candidate sizing pass). So these B/op are a floor for the per-frame fan-out cost.
- *
- * <pre>
- *   java --enable-preview -jar configd-testkit/target/benchmarks.jar \
- *       EdgeWireAllocBenchmark -prof gc -f 2 -wi 3 -i 4
- * </pre>
+ * (the production steady-state shape). Two production costs sit ON TOP of this and are NOT
+ * included here: the {@code SSLSocket} write allocation, and {@code FanOutSessionCore}'s
+ * per-frame batch assembly. So these B/op are a floor for the per-frame fan-out cost.
  */
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
@@ -62,7 +33,6 @@ public class EdgeWireAllocBenchmark {
     @Param({"1", "16", "64"})
     int notifyCount;
 
-    /** Config value size per mutation (a typical small config blob). */
     private static final int VALUE_BYTES = 64;
 
     /** Ed25519 signature length - every production delta is signed (mandatory). */
@@ -99,19 +69,16 @@ public class EdgeWireAllocBenchmark {
                 /* serverNowMillis */ 1_700_000_000_000L);
     }
 
-    /** STATUS QUO server->edge push: encode a NOTIFY batch of {@code notifyCount} deltas. */
     @Benchmark
     public byte[] encodeNotify() {
         return EdgeFrameCodec.encode(notifyFrame);
     }
 
-    /** Edge receive side: decode the NOTIFY batch back to frames + deltas + mutations. */
     @Benchmark
     public EdgeFrame decodeNotify() {
         return EdgeFrameCodec.decode(preEncodedNotify);
     }
 
-    /** The cheap coalesced keep-alive (payload-independent; for contrast with NOTIFY). */
     @Benchmark
     public byte[] encodeHeartbeat() {
         return EdgeFrameCodec.encode(heartbeatFrame);
